y.output

state 0
	$accept: .Start $end 

	STRING  shift 7
	IDENT  shift 8
	'{'  shift 10
	'('  shift 9
	'<'  shift 11
	.  error

	Dict  goto 5
	String  goto 3
	Array  goto 4
	Value  goto 2
	Data  goto 6
	Start  goto 1

state 1
	$accept:  Start.$end 

	$end  accept
	.  error


state 2
	Start:  Value.    (1)

	.  reduce 1 (src line 40)


state 3
	Value:  String.    (2)

	.  reduce 2 (src line 45)


state 4
	Value:  Array.    (3)

	.  reduce 3 (src line 48)


state 5
	Value:  Dict.    (4)

	.  reduce 4 (src line 51)


state 6
	Value:  Data.    (5)

	.  reduce 5 (src line 54)


state 7
	String:  STRING.    (6)

	.  reduce 6 (src line 59)


state 8
	String:  IDENT.    (7)

	.  reduce 7 (src line 65)


state 9
	Array:  '('.')' 
	Array:  '('.ArrayElementsMaybeWithComma ')' 

	STRING  shift 7
	IDENT  shift 8
	'{'  shift 10
	'('  shift 9
	')'  shift 12
	'<'  shift 11
	.  error

	Dict  goto 5
	String  goto 3
	Array  goto 4
	ArrayElements  goto 14
	ArrayElementsMaybeWithComma  goto 13
	Value  goto 16
	ArrayElement  goto 15
	Data  goto 6

state 10
	Dict:  '{'.'}' 
	Dict:  '{'.Pairs '}' 

	STRING  shift 7
	IDENT  shift 8
	'}'  shift 17
	.  error

	Pair  goto 19
	Pairs  goto 18
	String  goto 20

state 11
	Data:  '<'.DataChunks '>' 

	IDENT  shift 23
	.  error

	DataChunks  goto 21
	DataChunk  goto 22

state 12
	Array:  '(' ')'.    (8)

	.  reduce 8 (src line 69)


state 13
	Array:  '(' ArrayElementsMaybeWithComma.')' 

	')'  shift 24
	.  error


state 14
	ArrayElementsMaybeWithComma:  ArrayElements.    (10)
	ArrayElementsMaybeWithComma:  ArrayElements.',' 
	ArrayElements:  ArrayElements.',' ArrayElement 

	','  shift 25
	.  reduce 10 (src line 78)


state 15
	ArrayElements:  ArrayElement.    (12)

	.  reduce 12 (src line 85)


state 16
	ArrayElement:  Value.    (14)

	.  reduce 14 (src line 93)


state 17
	Dict:  '{' '}'.    (15)

	.  reduce 15 (src line 98)


state 18
	Dict:  '{' Pairs.'}' 
	Pairs:  Pairs.Pair 

	STRING  shift 7
	IDENT  shift 8
	'}'  shift 26
	.  error

	Pair  goto 27
	String  goto 20

state 19
	Pairs:  Pair.    (17)

	.  reduce 17 (src line 106)


state 20
	Pair:  String.'=' Value ';' 

	'='  shift 28
	.  error


state 21
	Data:  '<' DataChunks.'>' 
	DataChunks:  DataChunks.DataChunk 

	IDENT  shift 23
	'>'  shift 29
	.  error

	DataChunk  goto 30

state 22
	DataChunks:  DataChunk.    (22)

	.  reduce 22 (src line 134)


state 23
	DataChunk:  IDENT.    (21)

	.  reduce 21 (src line 123)


state 24
	Array:  '(' ArrayElementsMaybeWithComma ')'.    (9)

	.  reduce 9 (src line 72)


state 25
	ArrayElementsMaybeWithComma:  ArrayElements ','.    (11)
	ArrayElements:  ArrayElements ','.ArrayElement 

	STRING  shift 7
	IDENT  shift 8
	'{'  shift 10
	'('  shift 9
	'<'  shift 11
	.  reduce 11 (src line 81)

	Dict  goto 5
	String  goto 3
	Array  goto 4
	Value  goto 16
	ArrayElement  goto 31
	Data  goto 6

state 26
	Dict:  '{' Pairs '}'.    (16)

	.  reduce 16 (src line 101)


state 27
	Pairs:  Pairs Pair.    (18)

	.  reduce 18 (src line 109)


state 28
	Pair:  String '='.Value ';' 

	STRING  shift 7
	IDENT  shift 8
	'{'  shift 10
	'('  shift 9
	'<'  shift 11
	.  error

	Dict  goto 5
	String  goto 3
	Array  goto 4
	Value  goto 32
	Data  goto 6

state 29
	Data:  '<' DataChunks '>'.    (20)

	.  reduce 20 (src line 119)


state 30
	DataChunks:  DataChunks DataChunk.    (23)

	.  reduce 23 (src line 137)


state 31
	ArrayElements:  ArrayElements ',' ArrayElement.    (13)

	.  reduce 13 (src line 88)


state 32
	Pair:  String '=' Value.';' 

	';'  shift 33
	.  error


state 33
	Pair:  String '=' Value ';'.    (19)

	.  reduce 19 (src line 114)


14 terminals, 14 nonterminals
24 grammar rules, 34/2000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
63 working sets used
memory: parser 38/30000
17 extra closures
34 shift entries, 1 exceptions
20 goto entries
13 entries saved by goto default
Optimizer space used: output 44/30000
44 table entries, 0 zero
maximum spread: 14, maximum offset: 28
